fix: spacing

--- a/meu-projeto/src/componentes/sobre/sobre.css
+++ b/meu-projeto/src/componentes/sobre/sobre.css
@@ -7,7 +7,6 @@
   margin-bottom: 60px;
   font-size: 3em;
   text-align: center;
-  text-transform: uppercase;
   letter-spacing: 2px;
   border-bottom: 3px solid #e5b141;
   display: inline-block;
